convert java 17 code to java 1.8 code